# owi

./: CHANGES.md  owi.opam
.github/workflows/: build.yml
example/c/: README.md
src/: dune
src/ast/: types.ml
src/cmd/: cmd_c.ml  cmd_c.mli  cmd_conc.ml  cmd_conc.mli  cmd_cpp.ml  cmd_cpp.mli  cmd_fmt.ml  cmd_fmt.mli  cmd_instrument.ml  cmd_instrument.mli  cmd_iso.ml  cmd_iso.mli  cmd_opt.ml  cmd_opt.mli  cmd_replay.ml  cmd_replay.mli  cmd_run.ml  cmd_run.mli  cmd_rust.ml  cmd_script.ml  cmd_script.mli  cmd_sym.ml  cmd_sym.mli  cmd_utils.ml  cmd_utils.mli  cmd_validate.ml  cmd_validate.mli  cmd_version.mli  cmd_wasm2wat.ml  cmd_wasm2wat.mli  cmd_wat2wasm.ml  cmd_wat2wasm.mli  cmd_zig.ml  dune
src/concolic/: concolic_value.ml
src/concrete/: concrete_choice.ml  concrete_global.ml  concrete_global.mli  concrete_memory.ml  concrete_memory.mli  concrete_table.ml  concrete_table.mli
src/interpret/: interpret.ml  interpret.mli
src/intf/: choice_intf.ml
src/lang_c/libowi/include/: owi.h
src/lang_c/libowi/src/: klee.c
src/link/: link_env.ml  link_env.mli
src/parser/: binary_parser.ml  parse.ml  text_parser.mly
src/primitives/: int32.ml  int64.ml
src/text_to_binary/: rewrite.ml
src/validate/: binary_validate.ml
test/c/: exit.c
test/replay/: alloc.t
