(include_subdirs unqualified)

(library
 (public_name owi)
 (modules
  annot
  assigned
  binary
  binary_parser
  binary_to_text
  binary_types
  binary_validate
  choice_intf
  code_generator
  compile
  concrete
  concrete_choice
  concrete_extern_func
  concrete_global
  concrete_memory
  concrete_table
  concrete_value
  convert
  env_id
  float32
  float64
  contract
  func_id
  func_intf
  grouped
  imported
  indexed
  int32
  int64
  interpret
  interpret_intf
  kind
  spec
  link
  link_env
  named
  optimize
  parse
  result
  rewrite
  runtime
  script
  sexp
  share
  spectest
  stack
  string_map
  syntax
  text
  text_lexer
  text_parser
  text_validate
  types
  union_find
  value_intf
  v
  wasm_ffi_intf
  wutf8)
 (private_modules
  binary_parser
  convert
  spectest
  text_lexer
  text_parser
  wutf8)
 (libraries
  prelude
  digestif
  dune-build-info
  dune-site
  fmt
  hc
  logs
  menhirLib
  logs.fmt
  sedlex
  uutf
  fpath
  cmdliner
  xmlm)
 (flags (:standard -open Prelude))
 (preprocess
  (pps sedlex.ppx)))

(env
 (_
  (flags
   (-w +a-4-40-41-42-44-45-70-73 -warn-error +a-58))))

(generate_sites_module
 (module share)
 (sites owi))
