(include_subdirs no)

(library
 (public_name owi.cmd)
 (name owi_cmd)
 (modules
  cmd_utils
  cmd_c
  cmd_cpp
  cmd_fmt
  cmd_instrument
  cmd_iso
  cmd_opt
  cmd_replay
  cmd_run
  cmd_rust
  cmd_script
  cmd_sym
  cmd_conc
  cmd_validate
  cmd_version
  cmd_wasm2wat
  cmd_wat2wasm
  cmd_zig)
 (libraries fpath owi))
